--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -1,4 +1,4 @@
-name: test
+name: rubocop
 on:
   push:
     branches:
@@ -17,9 +17,5 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - name: RSpec
-        run: bundle exec rake
       - name: Rubocop
         run: bundle exec rubocop
-      - name: Reek
-        run: bundle exec rake reek
