--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           bundler-cache: true
       - name: RSpec
-        run: bundle exec rspec
+        run: bundle exec rake
