--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -12,10 +12,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get update -y && sudo apt-get install -y libvips
       - uses: actions/checkout@v3
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
       - name: RSpec
-        run: bundle exec rake
+        run: bundle exec rspec
