--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -20,3 +20,7 @@ jobs:
           bundler-cache: true
       - name: RSpec
         run: bundle exec rspec
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
