--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,12 +7,17 @@ Style/StringLiterals:
   Enabled: true
   EnforcedStyle: single_quotes
 
+Style/IfUnlessModifier:
+  Enabled: false
+
 Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: single_quotes
 
 Layout/LineLength:
   Max: 120
+  AllowedPatterns:
+    - 'raise'
 
 Naming/RescuedExceptionsVariableName:
   Enabled: false # conflicts with reek expectations
